--- a/src/agent/Cargo.toml
+++ b/src/agent/Cargo.toml
@@ -9,9 +9,10 @@ oci = { path = "../libs/oci" }
 rustjail = { path = "rustjail" }
 protocols = { path = "../libs/protocols" }
 lazy_static = "1.3.0"
-ttrpc = { version = "0.5.0", features = ["async", "protobuf-codec"], default-features = false }
+#ttrpc = { version = "0.6.0", features = ["async", "protobuf-codec"], default-features = false }
+ttrpc = { path = "/root/ttrpc-rust/" , features = ["async"]}
 protobuf = "=2.14.0"
-libc = "0.2.58"
+libc = "0.2.79"
 nix = "0.23.0"
 capctl = "0.2.0"
 serde_json = "1.0.39"
