--- a/src/tools/agent-ctl/Cargo.toml
+++ b/src/tools/agent-ctl/Cargo.toml
@@ -31,8 +31,8 @@ protobuf = "2.14.0"
 nix = "0.23.0"
 libc = "0.2.112"
 # XXX: Must be the same as the version used by the agent
-ttrpc = { version = "0.5.2" }
-
+#ttrpc = { version = "0.5.2" }
+ttrpc = { path = "/root/ttrpc-rust/" , features = ["async"]}
 # For parsing timeouts
 humantime = "2.1.0"
 
